@@ -1,18 +1,12 @@
 package com.blog.common.util;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.TreeMap;
-import java.util.stream.Collectors;
-
+import org.apache.commons.lang3.StringUtils;
 import org.hibernate.boot.model.naming.Identifier;
 import org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl;
 import org.hibernate.engine.jdbc.env.spi.JdbcEnvironment;
-
-import org.apache.commons.lang3.StringUtils;
 import org.springframework.context.annotation.Configuration;
+
+import java.util.*;
 
 /**
  * An example PhysicalNamingStrategy that implements database object naming standards
@@ -69,7 +63,6 @@ public class AcmeCorpPhysicalNamingStrategy extends PhysicalNamingStrategyStanda
     private List<String> splitAndReplace(String name) {
         return Arrays.stream(StringUtils.splitByCharacterTypeCamelCase(name))
                 .filter(StringUtils::isNotBlank)
-                .map(p -> ABBREVIATIONS.getOrDefault(p, p).toLowerCase(Locale.ROOT))
-                .collect(Collectors.toList());
+                .map(p -> ABBREVIATIONS.getOrDefault(p, p).toLowerCase(Locale.ROOT)).toList();
     }
 }
